# web-patcher

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  rust-toolchain.toml  rustfmt.toml  wrangler.toml
.cargo/: config.toml
.claude/: settings.local.json
crates/owtk-core/: Cargo.toml  build.rs
crates/owtk-core/src/: board.rs  lib.rs
crates/owtk-core/src/backup/: config.rs  detect.rs  layout.rs  mod.rs
crates/owtk-core/src/bootloader/: identify.rs  mod.rs  registry.rs  types.rs
crates/owtk-core/src/bootloader/defs/: gt.json  gts.json  pint.json  pint_x.json  xr.json  xrc.json
crates/owtk-core/src/crypto/: cipher.rs  extract.rs  mod.rs  types.rs
crates/owtk-core/src/firmware/: identify.rs  mod.rs  registry.rs  types.rs
crates/owtk-core/src/firmware/defs/: gt.json  gts.json  pint.json  pint_x.json  xr.json  xrc.json
crates/owtk-core/src/patches/: apply.rs  mod.rs  registry.rs  scripting.rs  types.rs
crates/owtk-core/src/patches/scripts/: SCRIPTING.md
crates/owtk-core/src/patches/scripts/bootloader/: bypass_flashing_restrictions.rhai
crates/owtk-core/src/patches/scripts/firmware/: bypass_ble_auth.rhai  change_bms_encryption_keys.rhai  disable_battery_type_check.rhai  disable_haptic.rhai  modify_top_speed.rhai  report_voltages.rhai  spoof_generation.rhai  third_party_battery.rhai  unlock_fwu.rhai
crates/owtk-core/src/patches/shellcode/: build.ps1  build.sh  link.ld  shellcode.h
crates/owtk-core/src/patches/shellcode/report_voltages/: report_voltages.c  report_voltages.elf
crates/owtk-core/tests/: pipeline.rs  registries.rs
src/: lib.rs  (+1 more)
(+20 files in other folders)
