[package]
name = "owtk-core"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "1.1.0"
sha1 = "0.10"
rhai = { version = "1", default-features = false, features = ["std", "sync"] }
aes = "0.8"
ecb = { version = "0.1.2", features = ["std", "alloc"] }
ctr = { version = "0.9.2", features = ["std", "alloc"] }
getrandom = { version = "0.2", features = ["js"] }
thiserror = "2"
anyhow = "1"

[build-dependencies]
serde_json = "1.0"

[lints]
workspace = true
